# Inside-site-f

./: .env.example  .gitignore  .replit  DEPLOYMENT_LINUX.md  DEPLOYMENT_LOCAL.md  DEPLOYMENT_UBUNTU_SERVER.md  INSTRUCTIONS.md  LDAP_MULTI_DOMAIN.md  LDAP_SETUP.md  PostgreSQL_CHEATSHEET.md  QUICKSTART.md  README.md  UPDATE_INSTRUCTIONS.md  create_superuser.py  create_test_data.py  data.json  db.sqlite3  manage.py  pyproject.toml  replit.md  requirements.txt  reset_password.py
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: (Копия) карта лицензий ГК ЗП от 05.03.2025 без КА_28-10-2025_10-32-31_1761615177472.geojson  Pasted--venv-PS-C-Users-a5123-Desktop-site-f-Inside-site-f-python-manage-py-migrate-Traceback-most-rec-1762746818753_1762746818753.txt  Pasted--venv-gicadm-srvgeo-var-www-mineral-licenses-sudo-tail-n-50-var-log-apache2-mineral-licenses-er-1762782933700_1762782933707.txt
licenses/: admin.py  auth_backends.py  models.py  urls.py  utils.py  views.py
licenses/management/commands/: import_geojson.py  update_license_statuses.py
licenses/migrations/: 0001_initial.py  0002_license_polygon_data_alter_license_latitude_and_more.py
licenses/templates/admin/licenses/: import_geojson.html
licenses/templates/licenses/: analytics.html  base.html  help.html  login.html  map.html  upload_geojson.html
mineral_licenses/: asgi.py  settings.py  settings_ldap.py  urls.py  wsgi.py
