[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.1.1",
    "psycopg2-binary>=2.9.0",
    "dj-database-url>=3.0.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "django-auth-ldap>=5.2.0",
    "python-ldap>=3.4.5",
    "reportlab>=4.4.4",
]
